--- a/package.json
+++ b/package.json
@@ -8,19 +8,21 @@
         "devserver": "live-server --browser=firefox",
         "start": "npm-run-all --parallel devserver watch:sass",
         "compile:sass": "node-sass sass/main.scss css/style.comp.css",
-        "prefix:css": "postcss --use autoprefixer --autoprefixer.browser 'last 10 versions' -o css/style.prefix.css css/style.comp.css",
+        "prefix:css": "postcss css/style.comp.css --use autoprefixer -o css/style.prefix.css",
         "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
-        "build:css": "npm-run-all compile:sass prefix:css compress:css"
+        "build": "npm-run-all compile:sass prefix:css compress:css"
     },
-    "browserslist": [
-        "last 10 versions"
-    ],
     "author": "Anik",
     "license": "ISC",
     "devDependencies": {
+        "autoprefixer": "^9.8.6",
         "node-sass": "^4.14.1",
         "npm-run-all": "^4.1.5",
         "postcss": "^7.0.32",
         "postcss-cli": "^7.1.2"
-    }
+    },
+    "browserslist": [
+        "last 10 versions",
+        ">0.2%"
+    ]
 }
